Fix visibility icon on project overview page
- Change `vertical-align: text-bottom` to `-3px` which
works better with text that has larger font size
- Fix `visibility_level_icon` to properly accept the `class`
property
- Fix visibility icon on project overview page

--- a/app/assets/stylesheets/framework/images.scss
+++ b/app/assets/stylesheets/framework/images.scss
@@ -54,6 +54,6 @@ svg {
   }
 
   &.s16 {
-    vertical-align: text-bottom;
+    vertical-align: -3px;
   }
 }
